# undicht_0.39

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: buffer_layout.h  debug.h  undicht_thread.h
examples/Hello World/: CMakeLists.txt
examples/Hello World/src/: main.cpp
graphics/: CMakeLists.txt
graphics/src/: graphics_config.h
graphics/src/api/: graphics_api.h
graphics/src/api/gl33/: gl33_graphics_api.cpp  gl33_graphics_api.h
graphics/src/api/vulkan/: vulkan_graphics_api.cpp  vulkan_graphics_api.h
graphics/src/window/: window.h
graphics/src/window/glfw/: glfw_window.cpp  glfw_window.h
tools/: CMakeLists.txt
tools/src/: undicht_time.cpp  undicht_time.h
